# breaking-barriers-sf-matrix-games

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  fly.toml  mvp-build-spec.md  pyproject.toml
presentation/: matrix-games-presentation.tex  presentation-agent-briefing.md  rubric.md  takeoff-showcase-presentation.tex
takeoff/: __init__.py  __main__.py  cli.py  config.py  controllers.py  engine.py  events.py  ledger.py  models.py  openrouter.py  prompts.py  render.py  rules.py  scenario.py  transcript.py  umpire.py  umpire_test.py  web.py  web_projection.py  web_sessions.py
takeoff/static/: app.css  app.js  game.html  index.html
tests/: conftest.py  test_config.py  test_controllers.py  test_engine_phase2.py  test_engine_phase3.py  test_fact_evaluation.py  test_human_parser_live.py  test_openrouter.py  test_phase1_core.py  test_rules_phase3.py  test_umpire.py  test_umpire_test.py  test_web_api.py  test_web_controller.py  test_web_projection.py
