[project]
name = "takeoff-matrix-game"
version = "0.1.0"
description = "An LLM-driven CLI matrix game about the AI 2027 scenario"
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.68.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
takeoff = "takeoff.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["takeoff"]

[tool.pytest.ini_options]
testpaths = ["tests"]